--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
   "scripts": {
+    "development": "mix",
     "dev": "mix",
     "watch": "mix watch",
     "watch-poll": "mix watch -- --watch-options-poll=1000",
     "hot": "mix watch --hot",
+    "production": "mix --production",
     "prod": "mix --production"
   },
   "devDependencies": {
-    "laravel-mix": "^6.0.49"
+    "@concretecms/bedrock": "^1.4.9",
+    "browser-sync": "^2.29.3",
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "cross-env": "^7.0.2",
+    "laravel-mix": "^6.0.41",
+    "postcss": "^8.4.31",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^12.4.0",
+    "vue-loader": "^15.11.1",
+    "vue-template-compiler": "^2.7.16",
+    "webpack": "^5.89.0"
   }
 }
